laatste push frfrfr

--- a/Opdracht_1.ipynb
+++ b/Opdracht_1.ipynb
@@ -2945,70 +2945,70 @@
     "## ***Literatuurlijst***\n",
     "\n",
     "### **Logistic Regression**\n",
-    "Nagpal, A. (2022, 05 januari). L1 and L2 Regularization Methods, Explained. Builtin. <br> https://builtin.com/data-science/l2-regularization.\n",
+    "Nagpal, A. (2022, 05 januari). L1 and L2 Regularization Methods, Explained. Builtin. <br>https://builtin.com/data-science/l2-regularization.\n",
     "\n",
-    "Gradient Descent in Machine Learning. (z.d.). Javapoint. <br> https://www.javatpoint.com/gradient-descent-in-machine-learning\n",
+    "Gradient Descent in Machine Learning. (z.d.). Javapoint. <br>https://www.javatpoint.com/gradient-descent-in-machine-learning\n",
     "\n",
-    "Jain, A. (2023). Ridge and lasso regression in Python | Complete tutorial (Updated 2023). Analytics Vidhya. <br> https://www.analyticsvidhya.com/blog/2016/01/ridge-lasso-regression-python-complete-tutorial/\n",
+    "Jain, A. (2023). Ridge and lasso regression in Python | Complete tutorial (Updated 2023). Analytics Vidhya. <br>https://www.analyticsvidhya.com/blog/2016/01/ridge-lasso-regression-python-complete-tutorial/\n",
     "\n",
-    "Team, D. S. (2020). Regularisatie. DATA SCIENCE. <br> https://datascience.eu/nl/machine-learning/regularisatie-in-machinaal-leren/\n",
+    "Team, D. S. (2020). Regularisatie. DATA SCIENCE. <br>https://datascience.eu/nl/machine-learning/regularisatie-in-machinaal-leren/\n",
     "\n",
-    "Week 2 - 2023 Machine Learning VT Powerpoint Slides. (n.d.). <br> https://brightspace.hhs.nl/d2l/le/lessons/56591/lessons/578907\n",
+    "Week 2 - 2023 Machine Learning VT Powerpoint Slides. (n.d.). <br>https://brightspace.hhs.nl/d2l/le/lessons/56591/lessons/578907\n",
     "\n",
     "### **Decision Tree**\n",
-    "Hoare, J. (2022, September 13). Pruning decision trees and machine Learning - Displayr. Displayr. <br> https://www.displayr.com/machine-learning-pruning-decision-trees/\n",
+    "Hoare, J. (2022, September 13). Pruning decision trees and machine Learning - Displayr. Displayr. <br>https://www.displayr.com/machine-learning-pruning-decision-trees/\n",
     "\n",
-    "ChatGPT, 2023, prompt 1: Increase Tree Plot size. <br> https://chat.openai.com/share/878ee097-cee4-4ee3-92f9-9d428b617eb9\n",
+    "ChatGPT, 2023, prompt 1: Increase Tree Plot size. <br>https://chat.openai.com/share/878ee097-cee4-4ee3-92f9-9d428b617eb9\n",
     "\n",
-    "Singh, D. (2022, March 12). Criterion used in Constructing Decision Tree - Geek Culture - Medium. Medium. <br> https://medium.com/geekculture/criterion-used-in-constructing-decision-tree-c89b7339600f\n",
+    "Singh, D. (2022, March 12). Criterion used in Constructing Decision Tree - Geek Culture - Medium. Medium. <br>https://medium.com/geekculture/criterion-used-in-constructing-decision-tree-c89b7339600f\n",
     "\n",
-    "1.10. Decision Trees. (n.d.). Scikit-learn. <br> https://scikit-learn.org/stable/modules/tree.html#minimal-cost-complexity-pruning\n",
+    "1.10. Decision Trees. (n.d.). Scikit-learn. <br>https://scikit-learn.org/stable/modules/tree.html#minimal-cost-complexity-pruning\n",
     "\n",
     "### **Random Forest**\n",
-    "Datacamp. (n.d.). Bagging and random forests - bagging. Full Course. DataCamp. <br> https://campus.datacamp.com/courses/machine-learning-with-tree-based-models-in-python/bagging-and-random-forests?ex=1\n",
+    "Datacamp. (n.d.). Bagging and random forests - bagging. Full Course. DataCamp. <br>https://campus.datacamp.com/courses/machine-learning-with-tree-based-models-in-python/bagging-and-random-forests?ex=1\n",
     "\n",
-    "What is Random Forest? | IBM. (n.d.). <br> https://www.ibm.com/topics/random-forest\n",
+    "What is Random Forest? | IBM. (n.d.). <br>https://www.ibm.com/topics/random-forest\n",
     "\n",
-    "sklearn.ensemble.RandomForestClassifier. (n.d.). Scikit-learn. <br> https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\n",
+    "sklearn.ensemble.RandomForestClassifier. (n.d.). Scikit-learn. <br>https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\n",
     "\n",
-    "Lawrence, B. (2018, July 20). Decision trees — pruning - towards data science. Medium. <br> https://towardsdatascience.com/decision-trees-pruning-4241cc266fef\n",
+    "Lawrence, B. (2018, July 20). Decision trees — pruning - towards data science. Medium. <br>https://towardsdatascience.com/decision-trees-pruning-4241cc266fef\n",
     "\n",
-    "Wikipedia contributors. (2023). Decision tree pruning. Wikipedia. <br> https://en.wikipedia.org/wiki/Decision_tree_pruning\n",
+    "Wikipedia contributors. (2023). Decision tree pruning. Wikipedia. <br>https://en.wikipedia.org/wiki/Decision_tree_pruning\n",
     "\n",
     "### **ADA Boosting**\n",
-    "Datacamp. (n.d.). Boosting - Adaboost. [Video]. DataCamp. <br> https://campus.datacamp.com/courses/machine-learning-with-tree-based-models-in-python/boosting?ex=1\n",
+    "Datacamp. (n.d.). Boosting - Adaboost. [Video]. DataCamp. <br>https://campus.datacamp.com/courses/machine-learning-with-tree-based-models-in-python/boosting?ex=1\n",
     "\n",
     "### **Gradient Boosting**\n",
-    "Week 4 - 2023 Machine Learning VT Powerpoint Slides. (n.d.). <br> https://brightspace.hhs.nl/d2l/le/lessons/56591/lessons/579395\n",
+    "Week 4 - 2023 Machine Learning VT Powerpoint Slides. (n.d.). <br>https://brightspace.hhs.nl/d2l/le/lessons/56591/lessons/579395\n",
     "\n",
-    "1.11. Ensembles: Gradient boosting, random forests, bagging, voting, stacking. (n.d.). Scikit-learn. <br> https://scikit-learn.org/stable/modules/ensemble.html#histogram-based-gradient-boosting\n",
+    "1.11. Ensembles: Gradient boosting, random forests, bagging, voting, stacking. (n.d.). Scikit-learn. <br>https://scikit-learn.org/stable/modules/ensemble.html#histogram-based-gradient-boosting\n",
     "\n",
     "### **Support Vector Machines**\n",
-    "Tieleman, P. (2023). Support Vector Machine in Python: uitleg & tutorial. Data Science Partners | Trainingen Data Science in Python, SQL & R. https://datasciencepartners.nl/support-vector-machine/\n",
+    "Tieleman, P. (2023). Support Vector Machine in Python: uitleg & tutorial. Data Science Partners | Trainingen Data Science in Python, SQL & R.<br>https://datasciencepartners.nl/support-vector-machine/\n",
     "\n",
-    "Pupale, R. (2022, March 9). Support Vector Machines(SVM) — An Overview - Towards Data Science. Medium. <br> https://towardsdatascience.com/https-medium-com-pupalerushikesh-svm-f4b42800e989\n",
+    "Pupale, R. (2022, March 9). Support Vector Machines(SVM) — An Overview - Towards Data Science. Medium. <br>https://towardsdatascience.com/https-medium-com-pupalerushikesh-svm-f4b42800e989\n",
     "\n",
-    "Jain, A. (2023). Ridge and lasso regression in Python | Complete tutorial (Updated 2023). Analytics Vidhya. <br> https://www.analyticsvidhya.com/blog/2016/01/ridge-lasso-regression-python-complete-tutorial/\n",
+    "Jain, A. (2023). Ridge and lasso regression in Python | Complete tutorial (Updated 2023). Analytics Vidhya. <br>https://www.analyticsvidhya.com/blog/2016/01/ridge-lasso-regression-python-complete-tutorial/\n",
     "\n",
-    "Roun (2013) What is the loss function of hard margin SVM? Cross Validated. <br> https://stats.stackexchange.com/questions/74499/what-is-the-loss-function-of-hard-margin-svm\n",
+    "Roun (2013) What is the loss function of hard margin SVM? Cross Validated. <br>https://stats.stackexchange.com/questions/74499/what-is-the-loss-function-of-hard-margin-svm\n",
     "\n",
-    "Team, D. S. (2020). Hoofdstuk 2 : SVM (Support Vector Machine) – Theorie. DATA SCIENCE. <br> https://datascience.eu/nl/wiskunde-statistiek/hoofdstuk-2-svm-support-vector-machine-theorie/\n",
+    "Team, D. S. (2020). Hoofdstuk 2 : SVM (Support Vector Machine) – Theorie. DATA SCIENCE. <br>https://datascience.eu/nl/wiskunde-statistiek/hoofdstuk-2-svm-support-vector-machine-theorie/\n",
     "\n",
-    "Team, D. S. (2020). Regularisatie. DATA SCIENCE. <br> https://datascience.eu/nl/machine-learning/regularisatie-in-machinaal-leren/\n",
+    "Team, D. S. (2020). Regularisatie. DATA SCIENCE. <br>https://datascience.eu/nl/machine-learning/regularisatie-in-machinaal-leren/\n",
     "\n",
-    "Sklearn.svm.SVC. (n.d.). Scikit-learn. <br> https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html\n",
+    "Sklearn.svm.SVC. (n.d.). Scikit-learn. <br>https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html\n",
     "\n",
     "### **Naive Bayes**\n",
-    "Wikipedia contributors. (2023). Bayes’ theorem. Wikipedia. <br> https://en.wikipedia.org/wiki/Bayes%27_theorem\n",
+    "Wikipedia contributors. (2023). Bayes’ theorem. Wikipedia. <br>https://en.wikipedia.org/wiki/Bayes%27_theorem\n",
     "\n",
-    "sklearn.naive_bayes.GaussianNB. (n.d.). Scikit-learn. <br> https://scikit-learn.org/stable/modules/generated/sklearn.naive_bayes.GaussianNB.html#sklearn.naive_bayes.GaussianNB\n",
+    "sklearn.naive_bayes.GaussianNB. (n.d.). Scikit-learn. <br>https://scikit-learn.org/stable/modules/generated/sklearn.naive_bayes.GaussianNB.html#sklearn.naive_bayes.GaussianNB\n",
     "\n",
-    "1.9. Naive Bayes. (n.d.). Scikit-learn. <br> https://scikit-learn.org/stable/modules/naive_bayes.html\n",
+    "1.9. Naive Bayes. (n.d.). Scikit-learn. <br>https://scikit-learn.org/stable/modules/naive_bayes.html\n",
     "\n",
     "### **Ensemble**\n",
-    "Awan-Ur-Rahman. (2023, August 3). Understanding soft voting and hard voting: A Comparative analysis of ensemble learning methods. Medium. https://medium.com/@awanurrahman.cse/understanding-soft-voting-and-hard-voting-a-comparative-analysis-of-ensemble-learning-methods-db0663d2c008\n",
+    "Awan-Ur-Rahman. (2023, August 3). Understanding soft voting and hard voting: A Comparative analysis of ensemble learning methods. Medium.<br>https://medium.com/@awanurrahman.cse/understanding-soft-voting-and-hard-voting-a-comparative-analysis-of-ensemble-learning-methods-db0663d2c008\n",
     "\n",
-    "sklearn.ensemble.VotingClassifier. (n.d.). Scikit-learn. <br> https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.VotingClassifier.html\n"
+    "sklearn.ensemble.VotingClassifier. (n.d.). Scikit-learn. <br>https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.VotingClassifier.html\n"
    ]
   }
  ],
