--- a/Opdracht_1.ipynb
+++ b/Opdracht_1.ipynb
@@ -773,7 +773,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Om de relaties tussen de kolommen beter duidelijk te maken word er hieronder gebruik gemaakt van verschillende visualisaties. Voor deze visualisaties zijn verschillende functies gemaakt."
+    "Om de relaties tussen de kolommen beter duidelijk te maken wordt er hieronder gebruik gemaakt van verschillende visualisaties. Voor deze visualisaties zijn verschillende functies gemaakt."
    ]
   },
   {
