--- a/Verhuuraantallen/Opdracht 2.ipynb
+++ b/Verhuuraantallen/Opdracht 2.ipynb
@@ -5,14 +5,37 @@
    "id": "2866f011",
    "metadata": {},
    "source": [
-    "# ***Voorspellen van verhuuraantallen 2023*** \n",
+    "# ***Voorspellen van Diabetes*** \n",
     "\n",
     "Teamleden:\n",
     "- Busse Heemskerk\n",
     "- Declan van den Hoek\n",
     "- Isa Dijkstra\n",
     "\n",
-    "In dit notebook worden er, aan de hand van een train dataset, verschillende Machine Learning modellen opgesteld om de meest accurate manier te vinden om diabetes te voorspellen."
+    "In dit notebook worden er, aan de hand van een train dataset, verschillende Machine Learning modellen opgesteld om de meest accurate manier te vinden om diabetes te voorspellen. Voor het project hebben we gewerkt in [GitHub](https://github.com/BJHeemskerk/MachineLearning), om makkelijk de bestanden te delen.\n",
+    "\n",
+    "## ***Inhoudsopgave*** <a name='begin'></a>\n",
+    "\n",
+    "1. [H1: Explorative Data Analysis](#h1)\n",
+    "    1. [H1.1: Relaties tussen kolommen](#h1.1)\n",
+    "    2. [H1.2: Standaardisatie](#h1.2)\n",
+    "2. [H2: Machine Learning en Metrics](#h2)\n",
+    "    1. [H2.1: De vorm van Machine Learning](#h2.1)\n",
+    "    2. [H2.2: Welke metric](#h2.2)\n",
+    "3. [H3: Modelleren](#h3)\n",
+    "    1. [H3.1: Logistische Regressie](#h3.1)\n",
+    "    2. [H3.2: Decision Tree](#h3.2)\n",
+    "    3. [H3.3: Random Forest](#h3.3)\n",
+    "    4. [H3.4: ADA Boosting](#h3.4)\n",
+    "    5. [H3.5: Gradient Boosting](#h3.5)\n",
+    "    6. [H3.6: Support Vector Machines](#h3.6)\n",
+    "    7. [H3.7: Naive Bayes](#h3.7)\n",
+    "    8. [H3.8: Ensemble](#h3.8)\n",
+    "4. [H4: Bevindingen](#h4)\n",
+    "5. [H5: Conclusie & Aanbevelingen](#h5)\n",
+    "    1. [H5.1: Feature Importances](#h5.1)\n",
+    "    2. [H5.2: Advies aan de Arts](#h5.2)\n",
+    "6. [Literatuurlijst](#literatuur)"
    ]
   },
   {
