--- a/Verhuuraantallen/Opdracht 2.ipynb
+++ b/Verhuuraantallen/Opdracht 2.ipynb
@@ -5,7 +5,7 @@
    "id": "2866f011",
    "metadata": {},
    "source": [
-    "# ***Voorspellen van Diabetes*** \n",
+    "# ***Voorspellen van Verhuuraantallen*** \n",
     "\n",
     "Teamleden:\n",
     "- Busse Heemskerk\n",
@@ -16,36 +16,20 @@
     "\n",
     "## ***Inhoudsopgave*** <a name='begin'></a>\n",
     "\n",
-    "1. [H1: Explorative Data Analysis](#h1)\n",
-    "    1. [H1.1: Relaties tussen kolommen](#h1.1)\n",
-    "    2. [H1.2: Standaardisatie](#h1.2)\n",
-    "2. [H2: Machine Learning en Metrics](#h2)\n",
-    "    1. [H2.1: De vorm van Machine Learning](#h2.1)\n",
-    "    2. [H2.2: Welke metric](#h2.2)\n",
-    "3. [H3: Modelleren](#h3)\n",
-    "    1. [H3.1: Logistische Regressie](#h3.1)\n",
-    "    2. [H3.2: Decision Tree](#h3.2)\n",
-    "    3. [H3.3: Random Forest](#h3.3)\n",
-    "    4. [H3.4: ADA Boosting](#h3.4)\n",
-    "    5. [H3.5: Gradient Boosting](#h3.5)\n",
-    "    6. [H3.6: Support Vector Machines](#h3.6)\n",
-    "    7. [H3.7: Naive Bayes](#h3.7)\n",
-    "    8. [H3.8: Ensemble](#h3.8)\n",
-    "4. [H4: Bevindingen](#h4)\n",
-    "5. [H5: Conclusie & Aanbevelingen](#h5)\n",
-    "    1. [H5.1: Feature Importances](#h5.1)\n",
-    "    2. [H5.2: Advies aan de Arts](#h5.2)\n",
-    "6. [Literatuurlijst](#literatuur)"
+    "1. [H1: Explorative Data Analysis](#h1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "412cd582",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "\n",
     "data_test = pd.read_csv('test.csv', sep = ',')\n",
     "data_train = pd.read_csv('train.csv', sep = ',')"
@@ -53,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "8b10e58b",
    "metadata": {},
    "outputs": [
@@ -245,13 +229,13 @@
        "[16637 rows x 8 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_train\n"
+    "data_train"
    ]
   },
   {
@@ -471,7 +455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
