--- a/Verhuuraantallen/Opdracht 2.ipynb
+++ b/Verhuuraantallen/Opdracht 2.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 3,
    "id": "412cd582",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 4,
    "id": "8b10e58b",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
        "4    1  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 5,
    "id": "23800c83",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 6,
    "id": "b9867d73",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
        "max        0.850700    977.000000  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 7,
    "id": "b38c2751",
    "metadata": {},
    "outputs": [],
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 8,
    "id": "7c32269d",
    "metadata": {},
    "outputs": [
@@ -569,7 +569,7 @@
        "4    1  2011      1    52    4           1            5  "
       ]
      },
-     "execution_count": 123,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 9,
    "id": "860f267e",
    "metadata": {},
    "outputs": [
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 10,
    "id": "73e5dafc",
    "metadata": {},
    "outputs": [],
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 11,
    "id": "c538b984",
    "metadata": {},
    "outputs": [
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 12,
    "id": "2b7af8e8",
    "metadata": {},
    "outputs": [
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 13,
    "id": "0230cf45",
    "metadata": {},
    "outputs": [
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 14,
    "id": "5037a288",
    "metadata": {},
    "outputs": [
@@ -864,7 +864,7 @@
        "2011-01-01 04:00:00    1"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 19,
    "id": "b3afd512",
    "metadata": {},
    "outputs": [],
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 20,
    "id": "b51c4138",
    "metadata": {},
    "outputs": [],
@@ -1027,12 +1027,13 @@
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.model_selection import KFold\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import TimeSeriesSplit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 21,
    "id": "f0cd7c53",
    "metadata": {},
    "outputs": [],
@@ -1171,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 33,
    "id": "64d9449b",
    "metadata": {},
    "outputs": [],
@@ -1188,7 +1189,7 @@
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=SEED)\n",
     "\n",
     "# Aanmaken van de folds\n",
-    "cv = KFold(n_splits=5, shuffle=True, random_state=SEED)"
+    "cv = TimeSeriesSplit(n_splits=5, test_size=457)"
    ]
   },
   {
@@ -1207,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 28,
    "id": "04282419",
    "metadata": {},
    "outputs": [
@@ -1230,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 29,
    "id": "63ec2100",
    "metadata": {},
    "outputs": [],
@@ -1244,17 +1245,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 32,
    "id": "a9a66fb6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Beste RMSE: 45.19045298393976\n",
+      "Beste parameters:\n",
+      "{'max_depth': 20, 'min_samples_leaf': 1, 'n_estimators': 200}\n"
+     ]
+    }
+   ],
    "source": [
-    "#grid_score(rf, param_rf)"
+    "grid_score(rf, param_rf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": null,
    "id": "ff8b9de0",
    "metadata": {},
    "outputs": [
@@ -1285,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1337,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": null,
    "id": "17d7acf9",
    "metadata": {},
    "outputs": [
@@ -1366,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": null,
    "id": "298d49f2",
    "metadata": {},
    "outputs": [],
@@ -1382,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "id": "8739c2f7",
    "metadata": {},
    "outputs": [],
@@ -1400,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "id": "6ac3463a",
    "metadata": {},
    "outputs": [
@@ -1433,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1460,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": null,
    "id": "2f8922af",
    "metadata": {},
    "outputs": [],
@@ -1477,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1514,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1581,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
