--- a/Verhuuraantallen/Opdracht 2.ipynb
+++ b/Verhuuraantallen/Opdracht 2.ipynb
@@ -1276,28 +1276,39 @@
    "id": "f7fbfa2e",
    "metadata": {},
    "source": [
-    "# ARIMA model\n",
+    "# K-Nearest Neighbours Regressor\n",
     "\n",
-    "Voor het vrije keuze timeseries model is gekozen voor een ARIMA model. ARIMA staat voor \"AutoRegressive Integrated Moving Average\". \"Autoregressive\" houdt in dat het model toekomstige waardes voorspelt op basis van historische waardes. \"Integrated\" betekent dat trends niet in consideratie worden genomen, om de voorspelling makkelijker te maken. En \"Moving Average\" zorgt er voor dat.. weet niet precies hoe dit te verwoorden. Iets met schommelingen op korte termijn.... zoek t straks wel uit (Hayes, 2023)"
+    "Wij hebben gekozen om een k-nearest neighbors model te gebruiken. Een K-nearest neighbours model (KNN) kan gebruikt worden voor classificatie of regressie problemen. In een KNN model word voor het voorspellen gekeken naar datapunten die in de buurt van de waarde die we willen voorspellen zitten, ofwel de \"neighbours\". Het model neemt dus de X waarden van de data die voorspeld moet worden, en vergelijkt dit met de X waarden van de trainingsdata die er vergelijkbaar uit ziet. Zo kan er een voorspelling worden gemaakt over de y waarde. Hier voor is er de mogelijkheid gebruik te maken van 3 verschillende metrics.(IBM, 2023) \n",
+    "\n",
+    "Er zijn enkele voordelen verbonden aan een KNN model. Zo is het model niet zo complex als andere modellen, wat de implementatie makkelijker maakt. Verder zijn er weinig hyperparameters, dit is zowel een voordeel als een nadeel.\n",
+    "\n",
+    "Omdat het model redelijk simpel is, wordt er op andere vlakken ingeleverd. Zo kan het model met grotere datasets veel eisen van de computer. Ook is er een hogere kans op overfitting. (GeeksforGeeks, 2023)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "voordelen + nadelen, waarom gekozen\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a1de7fce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#importeren benodigde module\n",
+    "from sklearn.neighbors import KNeighborsRegressor"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1de7fce",
+   "id": "9f1e3ca3",
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f05eaf4d",
-   "metadata": {},
-   "source": [
-    "bronnen enzo:\n",
-    "\n",
-    "Hayes, A. (2023, September 29). Autoregressive Integrated Moving Average (ARIMA) Prediction Model. Investopedia. https://www.investopedia.com/terms/a/autoregressive-integrated-moving-average-arima.asp"
-   ]
   },
   {
    "cell_type": "code",
@@ -1308,12 +1319,14 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b46cf12",
+   "cell_type": "markdown",
+   "id": "caa29dd5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "What is the k-nearest neighbors algorithm? | IBM. (n.d.). https://www.ibm.com/topics/knn\n",
+    "\n",
+    "GeeksforGeeks. (2023, November 9). K Nearest neighbor KNN algorithm. https://www.geeksforgeeks.org/k-nearest-neighbours/"
+   ]
   }
  ],
  "metadata": {
