--- a/Verhuuraantallen/Opdracht 2.ipynb
+++ b/Verhuuraantallen/Opdracht 2.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "412cd582",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "8b10e58b",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
        "4    1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "23800c83",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "b9867d73",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
        "max        0.850700    977.000000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "cf8b04ca",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
        "max        1.000000    977.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "be4c30ef",
    "metadata": {},
    "outputs": [],
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "8c5f63bf",
    "metadata": {},
    "outputs": [
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "71f2e562",
    "metadata": {},
    "outputs": [
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "c2114d4a",
    "metadata": {},
    "outputs": [
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "8314702d",
    "metadata": {},
    "outputs": [
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "23d38a00",
    "metadata": {},
    "outputs": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "17b489f3",
    "metadata": {},
    "outputs": [
@@ -868,7 +868,7 @@
        "[217 rows x 8 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "4bb854f8",
    "metadata": {},
    "outputs": [],
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "c257b33a",
    "metadata": {},
    "outputs": [
@@ -1074,7 +1074,7 @@
        "4    1  2011      1    52    4           1            5  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "d7d3215b",
    "metadata": {},
    "outputs": [],
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "9df844ad",
    "metadata": {},
    "outputs": [],
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "bcec0a6d",
    "metadata": {},
    "outputs": [],
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "f00a5321",
    "metadata": {},
    "outputs": [],
@@ -1276,7 +1276,7 @@
    "id": "f7fbfa2e",
    "metadata": {},
    "source": [
-    "# K-Nearest Neighbours Regressor\n",
+    "### H3.2 KNN Regressor\n",
     "\n",
     "Wij hebben gekozen om een k-nearest neighbors model te gebruiken. Een K-nearest neighbours model (KNN) kan gebruikt worden voor classificatie of regressie problemen. In een KNN model word voor het voorspellen gekeken naar datapunten die in de buurt van de waarde die we willen voorspellen zitten, ofwel de \"neighbours\". Het model neemt dus de X waarden van de data die voorspeld moet worden, en vergelijkt dit met de X waarden van de trainingsdata die er vergelijkbaar uit ziet. Zo kan er een voorspelling worden gemaakt over de y waarde. Hier voor is er de mogelijkheid gebruik te maken van 3 verschillende metrics.(IBM, 2023) \n",
     "\n",
@@ -1287,40 +1287,184 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "voordelen + nadelen, waarom gekozen\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "a1de7fce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#importeren benodigde module\n",
+    "#importeren benodigde module, kan verplaatst worden naar het begin\n",
     "from sklearn.neighbors import KNeighborsRegressor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9f1e3ca3",
+   "execution_count": 26,
+   "id": "d3d72615",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root Mean Squared Error: 49.99937455749173\n"
+     ]
+    }
+   ],
+   "source": [
+    "#opstellen K-Nearest Neighbors model\n",
+    "knn = KNeighborsRegressor(n_jobs=-1)\n",
+    "\n",
+    "model_score(knn)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
+   "id": "06c115f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 1.0,\n",
+       " 2: 0.9278336386596009,\n",
+       " 3: 0.945331824412537,\n",
+       " 4: 0.9488836593744489,\n",
+       " 5: 0.9452902369770326,\n",
+       " 6: 0.9385192511473908,\n",
+       " 7: 0.9304495044385894,\n",
+       " 8: 0.9231153105257233,\n",
+       " 9: 0.9161075507151684,\n",
+       " 10: 0.9102565839587992}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{1: 0.6970684002236613,\n",
+       " 2: 0.8884421701589612,\n",
+       " 3: 0.9156669193123572,\n",
+       " 4: 0.9158737090317144,\n",
+       " 5: 0.9102413050905908,\n",
+       " 6: 0.8978686983445449,\n",
+       " 7: 0.8989992301949375,\n",
+       " 8: 0.8938953072306889,\n",
+       " 9: 0.8931743605754676,\n",
+       " 10: 0.8883250888227191}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Bekijken aantal neighbors\n",
+    "train_accuracies = {}\n",
+    "test_accuracies = {}\n",
+    "neighbors = range(1, 11)\n",
+    "for neighbor in neighbors:\n",
+    "    knn = KNeighborsRegressor(n_neighbors=neighbor)\n",
+    "    knn.fit(X_train, y_train)\n",
+    "    train_accuracies[neighbor] = knn.score(X_train, y_train)\n",
+    "    test_accuracies[neighbor] = knn.score(X_test, y_test)\n",
+    "display(train_accuracies, test_accuracies)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "acd725c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root Mean Squared Error: 48.405217737002964\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn = KNeighborsRegressor(n_neighbors=4)\n",
+    "\n",
+    "model_score(knn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "c4407c70",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Beste RMSE: 56.60727357148515\n",
+      "Beste parameters:\n",
+      "{'algorithm': 'brute', 'metric': 'minkowski', 'weights': 'distance'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#parameters voor de GridSearch\n",
+    "params_knn = {'weights':['uniform', 'distance'],\n",
+    "             'metric':['minkowski','euclidean','manhattan' ],\n",
+    "             'algorithm':['ball_tree', 'kd_tree', 'brute']}\n",
+    "\n",
+    "grid_score(knn, params_knn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "6ab46b70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root Mean Squared Error: 46.27652642179541\n"
+     ]
+    }
+   ],
+   "source": [
+    "#uitkomsten GridSearch toepassen\n",
+    "knn_tuned = KNeighborsRegressor(algorithm='brute', n_jobs=-1, metric='minkowski', n_neighbors=4, weights='distance')\n",
+    "\n",
+    "model_score(knn_tuned)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "9c3663e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vs_knn_tuned_2_1116140455.csv has been saved!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#submissie(knn_tuned, 'knn_tuned_2')"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "caa29dd5",
+   "id": "550d604d",
    "metadata": {},
    "source": [
     "What is the k-nearest neighbors algorithm? | IBM. (n.d.). https://www.ibm.com/topics/knn\n",
