--- a/Verhuuraantallen/Trendlijn.ipynb
+++ b/Verhuuraantallen/Trendlijn.ipynb
@@ -30,6 +30,18 @@
     "plt.title('Timeseries and Trendline')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c264f650",
+   "metadata": {},
+   "source": [
+    "Na het nader bestuderen van de overige kolommen in de dataset is het opvallend dat bij de dagen met hoge windsnelheden niet alleen sprake is van hoge waarden voor windsnelheid, maar ook de gevoelstemperatuur is laag. Dit lijkt logisch gezien een hoge windsnelheid de gevoelstemperatuur lager zou maken. Ook zijn er een aantal rijen waar aangegeven word dat er regenachtige weersomstandigheden zijn.\n",
+    "\n",
+    "Dit kan aangeven dat de outliers in de windspeed gerelateerd zijn aan dagen met onaangename weersomstandigheden, zoals regen, onweer of zware bewolking. Gezien de gevoelstemperatuur over het algemeen laag ligt, en sommige rijen regen/onweer/zware bewolking aangeven, lijkt het er op dat deze outliers een natuurlijke afwijking in de data vertegenwoordigen. \n",
+    "\n",
+    "Daarom beargumenteren wij dat we deze outliers niet verwijderen. De impact op de algemene betrouwbaarheid is vrij beperkt. De rijen met outliers representeren slechts 1,3% van de data. Deze uitschieters lijken eerder te worden veroorzaakt door uitzonderlijke weersomstandigheden, en hun invloed op de totale trends van de dataset lijkt in dit contextuele licht minder belangrijk."
+   ]
   }
  ],
  "metadata": {
