Bronnen bij formules e.d.

--- a/Muziek/Opdracht 3.ipynb
+++ b/Muziek/Opdracht 3.ipynb
@@ -619,7 +619,7 @@
     "*Spectrale centroiden* voor geluid geven het gemiddelde aan van de frequenties in het geluidsspectrum. Het wordt gebruikt om het \"zwaartepunt\" van de spectrale inhoud van een geluidssignaal te bepalen.\n",
     "\n",
     "**Formule:**<br>\n",
-    "De spectrale centroidfrequentie ($ f_c $) voor geluid kan worden berekend met de formule:<br>\n",
+    "De spectrale centroidfrequentie ($ f_c $) voor geluid kan worden berekend met de formule (Nam, 2001):<br>\n",
     "$ f_c = \\frac{\\sum_{i=1}^{N} f_i \\cdot A_i}{\\sum_{i=1}^{N} A_i} $<br>\n",
     "waarbij:\n",
     "- $ N $ het aantal frequentiebanden is,\n",
@@ -631,21 +631,14 @@
     "De *Tonnetz* is een representatie van muzikale tonen in een driedimensionale ruimte. Het wordt vaak gebruikt voor de analyse van muzikale harmonie en modulatie. In het geval van een spectrogram wordt de Tonnetz meestal berekend op basis van een chromagram, afgeleid van het spectrogram.\n",
     "\n",
     "**Formule:**<br>\n",
-    "Laat $ C $ het chromagram zijn dat is afgeleid van het spectrogram. De Tonnetz ($ T $) wordt berekend als:<br>\n",
-    "$ T(n) = \\frac{1}{2}\\sum_{m=1}^{6} W(n,m) \\cdot \\left( C(m) - C(m+3) \\right) $<br>\n",
-    "waarbij:\n",
-    "- $ n $ de Tonnetz-dimensie vertegenwoordigt (1, 2 of 3),\n",
-    "- $ m $ de chromagram-bin vertegenwoordigt,\n",
-    "- $ W $ de gewichtsmatrix is op basis van het hexatonische systeem.\n",
+    "Voor de tonnetz kon geen exacte formule worden gevonden. Het wordt in librosa berekent door chroma features te projecteren op een 6-dimensionale basis die de perfecte kwint, kleine terts en grote terts elk als tweedimensionale coördinaten voorstelt. (Librosa.Feature.Tonnetz — Librosa 0.10.1 Documentation, n.d.)\n",
     "\n",
     "### Spectrale Rolloff\n",
     "**Uitleg:**<br>\n",
     "De *Spectrale Rolloff* is een maat voor de steilheid van het spectrum van een geluidssignaal. Het geeft aan welk percentage van de totale spectrale energie zich onder een bepaalde frequentie bevindt.\n",
     "\n",
     "**Formule:**<br>\n",
-    "Laat $ P(f) $ de spectrale energie zijn als functie van frequentie $ f $. De Spectrale Rolloff-frequentie ($ \\text{SR}_{\\text{freq}} $) wordt berekend als:<br>\n",
-    "$ \\int_{0}^{\\text{SR}_{\\text{freq}}} P(f) \\, df = \\text{SR}_{\\text{percentage}} \\times \\int_{0}^{f_{\\text{max}}} P(f) \\, df $<br>\n",
-    "waarbij $ f_{\\text{max}} $ de maximale frequentie in het spectrogram is.\n",
+    "Voor spectrale rolloff was ook geen formule te vinden. Volgens de documentatie van Librosa vertegenwoordigt de spectrale rolloff specifiek de frequentie waarbij een bepaald percentage (aangegeven door 'roll_percent', default = 0.85) van de totale spectrale energie is geconcentreerd.\n",
     "\n",
     "### Spectrale Contrast\n",
     "**Uitleg:**<br>\n",
@@ -824,17 +817,39 @@
    "source": [
     "## **MFCC functie**\n",
     "\n",
-    "Volgens Singh (2021) dienen Mel Frequency Cepstral Coefficients (MFCC's) als een representatie van het spectrum in een audio-signaal. Dit wordt bereikt door het signaal uit te drukken als een som van verschillende sinusgolven.\n",
+    "Volgens Singh (2021) dienen Mel Frequency Cepstral Coefficients (MFCC's) als een representatie van het spectrum in een audio-signaal. Dit wordt bereikt door het signaal uit te drukken als een som van verschillende sinusgolven. In de onderstaande tekst wordt het process voor de MFCC uitgelegd, de wiskundige informatie is verkregen door gebruik van verschillende bronnen.\n",
     "\n",
-    "De MFCC-coëfficiënten geven inzicht in snelheidsveranderingen binnen verschillende frequentiebanden. Positieve waarden geven aan dat er een concentratie van spectrale energie is in de lage frequentiegebieden, terwijl negatieve waarden wijzen op een focus op hoge frequenties. Bij toepassingen in machine learning worden gemiddelde coëfficiënten gebruikt in neurale netwerken om audio-labels te voorspellen.\n",
+    "Het proces begint met het opdelen van het signaal in korte tijdsframes om veranderingen in frequentie vast te leggen. Dit wordt gedaan om ervoor te zorgen dat de eigenschappen van het geluid in de tijd goed worden weergegeven. Dit staat ook wel bekend als windowing.\n",
     "\n",
-    "Maar hoe wordt geluid omgezet in MFCC-gegevens? Het proces begint met het opdelen van het signaal in korte tijdsframes om veranderingen in frequentie vast te leggen. Dit wordt gedaan om ervoor te zorgen dat de eigenschappen van het geluid in de tijd goed worden weergegeven. Na deze tijdsverdeling wordt windowing toegepast, een techniek die helpt om aannames van de Fourier-transformatie tegen te gaan en eventuele lekkage van spectrale informatie te minimaliseren. Vervolgens wordt de Discrete Fourier Transformatie (DFT) toegepast. Dit houdt in dat op elk tijdsframe een FFT wordt uitgevoerd, wat resulteert in een frequentiespectrum. Hiermee krijgt men inzicht in de frequentiecomponenten van het geluid gedurende elk kort tijdsinterval.\n",
+    "   Wiskundige representatie windowing (Wikipedia, 2023):\n",
+    "   $ x(n) = x[n] \\cdot w(n) $<br>\n",
+    "   Hierbij is:\n",
+    "   - $x(n)$ het oorspronkelijke signaal\n",
+    "   - $x[n]$ is het gevensterde signaal\n",
+    "   - $w(n)$ is de vensterfunctie.\n",
     "\n",
-    "Een volgende stap omvat het gebruik van Mel-gespreide Filterbanken. Deze filterbanken bestaan uit 20-40 driehoekige filters die op een specifieke manier over het frequentiespectrum zijn verdeeld. Elk tijdsframe wordt vermenigvuldigd met het vermogensspectrum, en de resulterende coëfficiënten worden opgeteld. Dit geeft een indicatie van de energie in verschillende frequentiebanden. Om de gegevens verder te verfijnen, worden logaritmes toegepast op de spectrogramwaarden. Dit resulteert in log-filterbankenergieën, waardoor de representatie van de audio-spectra meer overeenkomt met de menselijke perceptie van geluid.\n",
+    "Vervolgens wordt de Discrete Fourier Transformatie (DFT) toegepast. Dit houdt in dat op elk tijdsframe een FFT wordt uitgevoerd, wat resulteert in een frequentiespectrum. Hiermee krijgt men inzicht in de frequentiecomponenten van het geluid gedurende elk kort tijdsinterval.\n",
     "\n",
-    "Een optionele stap in het proces is decorrelatie door middel van de Discrete Cosine Transform (DCT). Dit helpt bij het verminderen van de onderlinge afhankelijkheid van de filterbankcoëfficiënten.\n",
+    "   Wiskundige representatie van DFT (Discrete Fourier Transform | Brilliant Math & Science Wiki, n.d.): $ X_k = \\sum_{n=0}^{N-1} x_n e^{-\\frac{N}{2}\\pi i k n} $<br>\n",
+    "   Hierbij is:\n",
+    "   - $X_k$ de DFT coëfficiënt\n",
+    "   - $k$ de frequentie-index\n",
+    "   - $N$ het aantal elementen van de reeks $x_n$\n",
+    "   - $x_n$ vertegenwoordigt de waarden van de reeks op discrete tijdsindices $n$\n",
+    "   - $e$ het natuurlijk logaritme\n",
+    "   - $i$ de imaginaire eenheid\n",
     "\n",
-    "Dit proces resulteert in wat we Mel Frequency Cepstral Coefficients noemen. Deze coëfficiënten vormen een gestructureerde set getallen die een compacte representatie bieden van de spectrale kenmerken van het oorspronkelijke geluidssignaal."
+    "Een volgende stap omvat het gebruik van Mel-gespreide Filterbanken. Deze filterbanken bestaan uit 20-40 driehoekige filters die op een specifieke manier over het frequentiespectrum zijn verdeeld. De filterbanken uiten zich wiskundig als een matrix. Vervolgens wordt elk tijdsframe vermenigvuldigd met de verkregen matrices, en de resulterende coëfficiënten worden opgeteld. Dit geeft een indicatie van de energie in verschillende frequentiebanden.\n",
+    "\n",
+    "   Wiskundige representatie:\n",
+    "   $ C_m = \\sum_{k=0}^{N-1} \\log(|X(k)|) \\cdot Filterbank $\n",
+    "\n",
+    "Om de gegevens verder te verfijnen, worden logaritmes toegepast op de spectrogramwaarden. Dit resulteert in log-filterbankenergieën, waardoor de representatie van de audio-spectra meer overeenkomt met de menselijke perceptie van geluid.\n",
+    "\n",
+    "   Wiskundige representatie:\n",
+    "   $ C_m' = \\log(C_m) $\n",
+    "\n",
+    "Dit proces resulteert in wat we Mel Frequency Cepstral Coefficients noemen. Deze coëfficiënten vormen een gestructureerde set getallen die een compacte representatie bieden van de spectrale kenmerken van het oorspronkelijke geluidssignaal. In python is het gelukkig mogelijk om deze stappen uit te laten voeren door middel van de librosa library.\n"
    ]
   },
   {
@@ -878,9 +893,13 @@
    "metadata": {},
    "source": [
     "## **Bronnen**\n",
-    "\n",
     "<a href='https://medium.com/@tanveer9812/mfccs-made-easy-7ef383006040'>Singh, T. (2021, December 10). MFCC’s Made Easy - Tanveer Singh - medium. Medium.</a><br>\n",
-    "<a href='https://musicinformationretrieval.com/spectral_features.html'>spectral_features. (n.d.).</a>"
+    "<a href='https://en.wikipedia.org/wiki/Mel-frequency_cepstrum'>Wikipedia contributors. (2023, November 13). Mel-frequency cepstrum. Wikipedia.</a><br>\n",
+    "<a href='https://brilliant.org/wiki/discrete-fourier-transform/'>Discrete Fourier Transform | Brilliant Math & Science Wiki. (n.d.).</a><br>\n",
+    "<a href='https://musicinformationretrieval.com/spectral_features.html'>spectral_features. (n.d.).</a><br>\n",
+    "<a href='https://ccrma.stanford.edu/~unjung/AIR/areaExam.pdf'>Nam, U. (2001, April 28). Special Area Exam Part II.</a><br>\n",
+    "<a href='https://librosa.org/doc/main/generated/librosa.feature.tonnetz.html'>librosa.feature.tonnetz — librosa 0.10.1 documentation. (n.d.).</a><br>\n",
+    "<a href='https://librosa.org/doc/main/generated/librosa.feature.spectral_rolloff.html'>librosa.feature.spectral_rolloff — librosa 0.10.1 documentation. (n.d.).</a><br>\n"
    ]
   }
  ],
