kleine nodige edit

--- a/Muziek/Opdracht 3.ipynb
+++ b/Muziek/Opdracht 3.ipynb
@@ -1784,7 +1784,7 @@
     "        van MFCCs per coëfficiënt.\n",
     "    \"\"\"\n",
     "    # Compute RMS Energy\n",
-    "    rms_energy = librosa.feature.rms(y=data)[0]\n",
+    "    rms_energy = lf.rms(y=data)[0]\n",
     "\n",
     "    datadict = {}\n",
     "\n",
@@ -1811,7 +1811,7 @@
    "source": [
     "def chroma_features(data, sfreq):\n",
     "    # Compute Chroma feature\n",
-    "    chroma = librosa.feature.chroma_stft(y=data, sr=sfreq)\n",
+    "    chroma = lf.chroma_stft(y=data, sr=sfreq)\n",
     "\n",
     "    datadict = {}\n",
     "\n",
@@ -1839,7 +1839,7 @@
    "source": [
     "def zero_crossing_rate_features(data, sfreq):\n",
     "    # Compute Zero Crossing Rate (ZCR)\n",
-    "    zcr = librosa.feature.zero_crossing_rate(y=data)\n",
+    "    zcr = lf.zero_crossing_rate(y=data)\n",
     "\n",
     "    datadict = {}\n",
     "\n",
